NDD-1003: Added styles to fix SCSS on callout body section and align with content -- align right.

--- a/docroot/profiles/custom/webny/themes/custom/webny_theme/sass/components/_callouts.scss
+++ b/docroot/profiles/custom/webny/themes/custom/webny_theme/sass/components/_callouts.scss
@@ -89,8 +89,8 @@
   // THE ENTIRE CALLOUT BODY SECTION
   .webny-callouts-section {
     position: absolute;
-    top: 110px;
-    right: 0;
+    top: 82px;
+    right: -30%;
     width: 33.3333%;
     height: 100%;
     padding: 0;
@@ -103,8 +103,6 @@
     }
 
   }
-
-
 
   // THE HEAVY BODY OF THE CALLOUTS
   .body-callouts{
